support parallel pipeline

--- a/web/index.html
+++ b/web/index.html
@@ -293,12 +293,12 @@
                                                     <label for="dbxURL" class="form-label">Databricks URL</label>
                                                     <input type="text" class="form-control form-control-sm" id="dbxURL"
                                                         readonly
-                                                        value="https://adb-1983375824764129.9.azuredatabricks.net/">
+                                                        value="https://adb-1595635774686362.2.azuredatabricks.net/">
                                                 </div>
                                                 <div class="mb-3 ">
                                                     <label for="dbxURL" class="form-label">Databricks Cluster ID</label>
                                                     <input type="text" class="form-control form-control-sm"
-                                                        id="dbxClusterId" readonly value="0612-144733-vbcidmwo">
+                                                        id="dbxClusterId" readonly value="1021-023335-e3o079bt">
                                                 </div>
                                                 <div class="mb-3">
                                                     <label for="dbxJobName" class="form-label">Databricks Job
@@ -1549,7 +1549,9 @@
                                 "file",
                                 "view"
                             ]
-                        }
+                        },
+                        schema: {},
+                        sampleData: []
 
                     }
 
