--- a/web/index.html
+++ b/web/index.html
@@ -190,11 +190,12 @@
                             <div class="container-fluid pt-1" id="config-ui-staging-content-wrap"
                                 style="overflow-x:hidden" v-if="currentPipelineStagingTask">
                                 <div id="config-ui-staging-content">
-                                    <!-- <div class="row m-2">
+                                    
+                                    <div class="row m-2">
                                         <div class="col-10"></div>
-                                        <button type="button" class="col-2 btn btn-outline-primary btn-sm"
-                                            @click="newStagingTask()">New Task</button>
-                                    </div> -->
+                                        <button type="button" class="col-2 btn btn-outline-danger btn-sm"
+                                            @click="deleteStagingTask()">Delete Task</button>
+                                    </div>
                                     <form class="border p-2">
                                         <div class="row mb-3">
                                             <div class="col-6 ">
@@ -508,11 +509,11 @@
                             <div class="container-fluid pt-1" id="config-ui-standard-content-wrap"
                                 v-if="currentPipelineStandardTask">
                                 <div id="config-ui-standard-content">
-                                    <!-- <div class="row m-2">
+                                    <div class="row m-2">
                                         <div class="col-10"></div>
-                                        <button type="button" class="col-2 btn btn-outline-primary btn-sm"
-                                            @click="newStandardTask()">New Task</button>
-                                    </div> -->
+                                        <button type="button" class="col-2 btn btn-outline-danger btn-sm"
+                                            @click="deleteStandardTask()">Delete Task</button>
+                                    </div>
 
                                     <form class="border p-3">
                                         <div class="row">
@@ -675,8 +676,8 @@
                                 <div id="config-ui-serving-content">
                                     <div class="row m-2">
                                         <div class="col-10"></div>
-                                        <button type="button" class="col-2 btn btn-outline-primary btn-sm"
-                                            @click="newServingTask()">New Task</button>
+                                        <button type="button" class="col-2 btn btn-outline-danger btn-sm"
+                                            @click="deleteServingTask()">Delete Task</button>
                                     </div>
 
                                     <form class="border p-3">
