feat: add sql error message

--- a/web/index.html
+++ b/web/index.html
@@ -627,6 +627,9 @@
                                                 </div>
                                             </div>
 
+                                            <div class="mb-3" id="standard-sql-error-message">
+                                            </div>
+
                                             <div class="row m-2">
                                                 <div class="col-10">
                                                 </div>
@@ -792,8 +795,10 @@
                                                 <div class="form-control form-control-sm"
                                                     style="height:100%;width: 100%;" id="config-ui-serving-python">
                                                 </div>
-                                            </div>
+                                            </div> 
 
+                                            <div class="mb-3" id="serving-sql-error-message">
+                                            </div>
 
                                             <div class="row m-2">
                                                 <div class="col-10">
