feat: add sql and python error message

--- a/web/index.html
+++ b/web/index.html
@@ -627,7 +627,7 @@
                                                 </div>
                                             </div>
 
-                                            <div class="mb-3" id="standard-sql-error-message">
+                                            <div class="mb-3" id="standard-error-message">
                                             </div>
 
                                             <div class="row m-2">
@@ -797,7 +797,7 @@
                                                 </div>
                                             </div> 
 
-                                            <div class="mb-3" id="serving-sql-error-message">
+                                            <div class="mb-3" id="serving-error-message">
                                             </div>
 
                                             <div class="row m-2">
