--- a/web/index.html
+++ b/web/index.html
@@ -927,8 +927,8 @@
         integrity="sha512-odNmoc1XJy5x1TMVMdC7EMs3IVdItLPlCeL5vSUPN2llYKMJ2eByTTAIiiuqLg+GdNr9hF6z81p27DArRFKT7A=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-    <script src="https://unpkg.com/mermaid/dist/mermaid.min.js"></script>
-    <script src="https://unpkg.com/vue-mermaid-string"></script>
+    <script src="https://unpkg.com/mermaid@9/dist/mermaid.min.js"></script>
+    <script src="https://unpkg.com/vue-mermaid-string@3"></script>
     <script src="index.js"></script>
 </body>
 
